--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong> CONTACT US </strong>
                     </h4>
-                    <p>Link to the discord server will be added later. </p>
+                    <p>Link to the discord server : </p>
+                    <p> https://discord.gg/kHKr7frvf4 </p> 
                     <p> Open to all </p> 
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> Will be added later </li>
